add post window added, but it doesnt work yet. lack of backend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="LastNames">Apellidos</string>
     <string name="passwordInput">Contraseña</string>
     <string name="inputDate">Fecha de nacimiento</string>
+    <string name="tittle">titulo</string>
+    <string name="Share">compartir</string>
+    <string name="content">contenido</string>
 </resources>
